--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -12,7 +13,17 @@
   "type": "module",
   "dependencies": {
     "axios": "^1.13.4",
-    "dotenv": "^17.2.3",
-    "express": "^5.2.1"
-  }
+    "cors": "^2.8.6",
+    "dotenv": "^17.3.1",
+    "express": "^5.2.1",
+    "node-fetch": "^3.3.2"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/bmcdamien30/garnett-work-web.git"
+  },
+  "bugs": {
+    "url": "https://github.com/bmcdamien30/garnett-work-web/issues"
+  },
+  "homepage": "https://github.com/bmcdamien30/garnett-work-web#readme"
 }
