--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,20 +11,13 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "module",
   "dependencies": {
     "axios": "^1.13.4",
     "cors": "^2.8.6",
     "dotenv": "^17.3.1",
     "express": "^5.2.1",
-    "node-fetch": "^3.3.2"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/bmcdamien30/garnett-work-web.git"
-  },
-  "bugs": {
-    "url": "https://github.com/bmcdamien30/garnett-work-web/issues"
-  },
-  "homepage": "https://github.com/bmcdamien30/garnett-work-web#readme"
+    "node-fetch": "^3.3.2",
+    "puppeteer": "^24.37.3",
+    "tall": "^8.0.0"
+  }
 }
